# ufotofu_queues

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fixed_bulk.rs  fixed_enqueue_dequeue.rs  static_bulk.rs  static_enqueue_dequeue.rs
src/: fixed.rs  lib.rs  static_.rs
