[package]
name = "ufotofu_queues"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu_queues"
description = "Infallible queues that support bulk enqueueing and dequeueing"
exclude = [
    "fuzz/*",
    ".github/workflows/rust.yml",
]
