[package]
name = "ufotofu_queues"
version = "0.4.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu_queues"
description = "Infallible queues that support bulk enqueueing and dequeueing"
exclude = [
    "fuzz/*",
    ".github/workflows/rust.yml",
]

[features]

default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = []

# Provide functionality that relies on dynamic memory allocation. Enabling `std` automatically enables all `alloc` features.
alloc = []