[package]
name = "ufotofu_queues-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.ufotofu_queues]
path = ".."

[[bin]]
name = "fixed_bulk"
path = "fuzz_targets/fixed_bulk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fixed_enqueue_dequeue"
path = "fuzz_targets/fixed_enqueue_dequeue.rs"
test = false
doc = false
bench = false

[[bin]]
name = "static_bulk"
path = "fuzz_targets/static_bulk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "static_enqueue_dequeue"
path = "fuzz_targets/static_enqueue_dequeue.rs"
test = false
doc = false
bench = false
